--- a/trunk/esb-mule/.classpath
+++ b/trunk/esb-mule/.classpath
@@ -3,24 +3,14 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/activeio-core-3.0.0-incubator.jar"/>
-	<classpathentry kind="lib" path="lib/activemq-core-4.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/geronimo-j2ee-management_1.0_spec-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/geronimo-jms_1.1_spec-1.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3.8.1"/>
-	<classpathentry kind="lib" path="lib/backport-util-concurrent-2.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/axiom-api-1.2.4.jar"/>
 	<classpathentry kind="lib" path="lib/axiom-dom-1.2.4.jar"/>
 	<classpathentry kind="lib" path="lib/axiom-impl-1.2.4.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.14.jar"/>
-	<classpathentry kind="lib" path="lib/mule-core-1.4.0.jar"/>
 	<classpathentry kind="lib" path="lib/jibx/jibx-bind-1.1.4.jar"/>
 	<classpathentry kind="lib" path="lib/jibx/jibx-run-1.1.4.jar"/>
-	<classpathentry kind="lib" path="lib/spring/spring-beans.jar"/>
-	<classpathentry kind="lib" path="lib/spring/spring-context.jar"/>
-	<classpathentry kind="lib" path="lib/spring/spring-core.jar"/>
-	<classpathentry kind="lib" path="lib/spring/spring-dao.jar"/>
-	<classpathentry kind="lib" path="lib/spring/spring-jms.jar"/>
+	<classpathentry kind="lib" path="lib/activemq/activeio-core-3.0.0-incubator.jar"/>
+	<classpathentry kind="lib" path="lib/activemq/activemq-core-4.1.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/MULE_LIBS"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
