--- a/trunk/mule/.classpath
+++ b/trunk/mule/.classpath
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="src-generated"/>
-	<classpathentry kind="src" path="src-override"/>
+	<classpathentry kind="src" output="classes-generated" path="src-generated"/>
+	<classpathentry kind="src" output="classes-generated" path="src-override"/>
+	<classpathentry kind="src" output="classes-test" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JIBX"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ACTIVEMQ"/>
@@ -10,5 +11,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/OPENEJB"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/XFIRE"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/WSS4J"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
