--- a/trunk/mule/.classpath
+++ b/trunk/mule/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" output="classes-generated" path="src-generated"/>
-	<classpathentry kind="src" output="classes-generated" path="src-override"/>
-	<classpathentry kind="src" output="classes-test" path="test"/>
+	<classpathentry kind="src" output="classes-override" path="src-override"/>
+	<classpathentry kind="src" output="classes-test" path="src-test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JIBX"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ACTIVEMQ"/>
